--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,50 +1,69 @@
-TMUX=~/dotfiles/tmux
-TERM=screen-256color
+# {{{ Plugins 
+	set -g @plugin 'tmux-plugins/tpm'
+	set -g @plugin 'tmux-plugins/tmux-copycat'
+	set -g @plugin 'tmux-plugins/tmux-battery'
+	set -g @plugin 'tmux-plugins/tmux-cpu'
+	set -g @plugin 'tmux-plugins/tmux-yank'
+	set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+	set -g @plugin 'tmux-plugins/tmux-sensible'
+	set -g @plugin 'tmux-plugins/tmux-open'
+# }}}
+# {{{ Plugin Settings 
+	set -g @open-S 'https://www.duckduckgo.com/'
+# }}}
+# {{{ Options 
+	set -g default-terminal "screen-256color"
+	set-option -ga terminal-overrides ",xterm-256color:Tc"
+	set-environment -g TMUX_PLUGIN_MANAGER_PATH '$HOME/dotfiles/tmux/plugins/'
 
-unbind-key C-b
-set-option -g prefix C-a
-set -g prefix C-a
-bind-key C-a send-prefix
+	set -g base-index 1
 
-set -g base-index 1
+	# loud or quiet?
+	set-option -g visual-activity off
+	set-option -g visual-bell off
+	set-option -g visual-silence off
+	set-window-option -g monitor-activity off
+	set-option -g bell-action none
 
-bind -n S-Left  previous-window
-bind -n S-Right next-window
+	set -sg escape-time 0
 
-bind \\ split-window -h
-bind - split-window -v
-bind r source-file ~/.tmux.conf \; display "Reloaded tmux.conf"
-bind h select-pane -L
-bind l select-pane -R
-bind k select-pane -U
-bind j select-pane -D
-bind -r < resize-pane -L 1
-bind -r > resize-pane -R 1
-bind -r _ resize-pane -D 1
-bind -r + resize-pane -U 1
-setw -g mouse on
-set-option -g allow-rename off
-bind-key -r Tab select-pane -t :.+
+	set -g renumber-windows on
+	set -g history-limit 50000
+	set -g status-keys vi
+	setw -g mode-keys vi
 
-# loud or quiet?
-set-option -g visual-activity off
-set-option -g visual-bell off
-set-option -g visual-silence off
-set-window-option -g monitor-activity off
-set-option -g bell-action none
+	set -g focus-events on
+# }}}
+# {{{ Bindings
+	unbind-key C-b
+	set-option -g prefix C-a
+	set -g prefix C-a
+	bind-key C-a send-prefix
 
-# statusbar
-set -g status-position top
+	bind -n S-Left  previous-window
+	bind -n S-Right next-window
 
-set -sg escape-time 0
+	bind \\ split-window -h
+	bind - split-window -v
+	bind r source-file ~/.tmux.conf \; display "Reloaded tmux.conf"
+	bind h select-pane -L
+	bind l select-pane -R
+	bind k select-pane -U
+	bind j select-pane -D
+	bind -r < resize-pane -L 1
+	bind -r > resize-pane -R 1
+	bind -r _ resize-pane -D 1
+	bind -r + resize-pane -U 1
+	setw -g mouse on
+	set-option -g allow-rename off
+	bind-key -r Tab select-pane -t :.+
+	bind-key -T copy-mode-vi v send-keys -X begin-selection
+	bind-key -T copy-mode-vi y send-keys -X copy-selection
+	bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
 
-set -g renumber-windows on
-set -g history-limit 50000
-set -g status-keys vi
-setw -g mode-keys vi
-
-bind b copy-mode
-bind p paste-buffer
-bind C-p choose-buffer
-
-source ~/dotfiles/tmux/tmuxline.conf
+	bind b copy-mode
+	bind p paste-buffer
+	bind C-p choose-buffer
+# }}}
+run-shell '$HOME/dotfiles/tmux/statusline.sh'
+run '$HOME/dotfiles/tmux/tpm/tpm'
